--- a/app/src/main/res/layout/todo_creation_fragment.xml
+++ b/app/src/main/res/layout/todo_creation_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorWhite">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,6 +49,14 @@
         android:layout_height="match_parent"
         android:padding="16dp"
         android:orientation="vertical">
+
+        <Switch
+            android:id="@+id/todo_creation_high_priority"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/high_priority"
+            android:layout_marginBottom="8dp"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
