--- a/app/src/main/res/layout/goal_list_item.xml
+++ b/app/src/main/res/layout/goal_list_item.xml
@@ -11,8 +11,7 @@
         android:id="@+id/goal_color_flag"
         android:layout_width="8dp"
         android:layout_height="match_parent"
-        android:layout_marginRight="4dp"
-        android:background="@color/colorMaterialOrange"/>
+        android:layout_marginEnd="4dp"/>
 
     <TextView
         android:id="@+id/goal_text"
@@ -22,21 +21,21 @@
         android:inputType="text"
         android:text="text"
         android:textColor="#000"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"/>
 
-    <TextView
-        android:id="@+id/goal_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:text="100%"
-        android:textColor="#000"
-        android:textSize="20sp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="4dp"/>
+<!--    <TextView-->
+<!--        android:id="@+id/goal_progress"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:inputType="text"-->
+<!--        android:text="100%"-->
+<!--        android:textColor="#000"-->
+<!--        android:textSize="14sp"-->
+<!--        android:layout_marginBottom="16dp"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:layout_marginRight="4dp"/>-->
 
 </LinearLayout>
 
