--- a/app/src/main/res/layout/step_list_item.xml
+++ b/app/src/main/res/layout/step_list_item.xml
@@ -5,16 +5,14 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/todo_list_item_style"
-    android:layout_margin="4dp"
-    android:padding="4dp">
+    android:layout_margin="4dp">
 
     <View
         android:id="@+id/step_color_flag"
-        android:layout_width="8dp"
-        android:layout_height="8dp"
+        android:layout_width="4dp"
+        android:layout_height="match_parent"
         android:layout_marginRight="4dp"
-        android:layout_gravity="center_vertical"
-        android:background="@drawable/step_indicator_false"/>
+        android:background="@color/colorMaterialRed"/>
 
     <TextView
         android:id="@+id/step_text_list_item"
@@ -24,6 +22,8 @@
         android:inputType="text"
         android:text="text"
         android:textColor="#000"
-        android:textSize="20sp"/>
+        android:textSize="12sp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"/>
 
 </LinearLayout>
