--- a/app/src/main/res/layout/habit_info.xml
+++ b/app/src/main/res/layout/habit_info.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
-            android:hint="@string/title"
+            android:hint="@string/habit_title"
             android:textSize="16sp"
             android:background="@android:color/transparent"
             android:layout_marginTop="24dp"/>
