--- a/app/src/main/res/layout/step_creation_fragment.xml
+++ b/app/src/main/res/layout/step_creation_fragment.xml
@@ -5,6 +5,7 @@
     android:background="@color/colorWhite">
 
     <LinearLayout
+        android:id="@+id/step_creation_header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -42,7 +43,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
-            android:hint="@string/title"
+            android:hint="@string/step_title"
             android:background="@android:color/transparent"
             android:layout_marginTop="17dp"/>
     </LinearLayout>
@@ -62,6 +63,34 @@
             android:background="@android:color/transparent"
             android:layout_marginBottom="8dp"/>
 
+        <LinearLayout
+            android:id="@+id/step_creation_color_picker_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/step_creation_color_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/color_choice"
+                android:inputType="textPersonName"
+                android:textSize="16sp"
+                android:layout_weight="1"/>
+
+            <View
+                android:id="@+id/step_creation_chosen_color"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:background="@color/colorMaterialGreen"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="5dp"/>
+        </LinearLayout>
+
     </LinearLayout>
+
+
 
 </LinearLayout>
