--- a/app/src/main/res/layout/step_info.xml
+++ b/app/src/main/res/layout/step_info.xml
@@ -6,6 +6,7 @@
     android:background="@color/colorWhite">
 
     <LinearLayout
+        android:id="@+id/step_info_header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorMaterialGreen"
@@ -43,7 +44,7 @@
             android:layout_marginTop="24dp"
             android:background="@android:color/transparent"
             android:ems="10"
-            android:hint="@string/title"
+            android:hint="@string/step_title"
             android:inputType="text"
             android:textSize="16sp" />
     </LinearLayout>
@@ -85,6 +86,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/step_info_color_picker_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/step_info_color_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/color_choice"
+                android:inputType="textPersonName"
+                android:textSize="16sp"
+                android:layout_weight="1"/>
+
+            <View
+                android:id="@+id/step_info_chosen_color"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:background="@color/colorMaterialGreen"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="5dp"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
