--- a/app/src/main/res/layout/steps_fragment.xml
+++ b/app/src/main/res/layout/steps_fragment.xml
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:background="@android:color/transparent"
-                android:hint="@string/title"
+                android:hint="@string/goal_title"
                 android:textColor="#000"
                 android:textSize="16sp"
                 android:layout_weight="1"/>
