--- a/app/src/main/res/layout/todo_creation_fragment.xml
+++ b/app/src/main/res/layout/todo_creation_fragment.xml
@@ -5,6 +5,7 @@
     android:background="@color/colorWhite">
 
     <LinearLayout
+        android:id="@+id/todo_creation_fragment_header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -39,7 +40,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
-            android:hint="@string/title"
+            android:hint="@string/task_title"
             android:layout_marginTop="16dp"
             android:background="@android:color/transparent"/>
     </LinearLayout>
@@ -57,6 +58,32 @@
             android:hint="@string/high_priority"
             android:layout_marginBottom="8dp"
             android:textSize="16sp" />
+
+        <LinearLayout
+            android:id="@+id/todo_creation_color_picker_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/todo_creation_color_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/color_choice"
+                android:inputType="textPersonName"
+                android:textSize="16sp"
+                android:layout_weight="1"/>
+
+            <View
+                android:id="@+id/todo_creation_chosen_color"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:background="@color/colorMaterialGreen"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="5dp"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
